Adding my answers

--- a/Starter_Code/Crypto_Clustering.ipynb
+++ b/Starter_Code/Crypto_Clustering.ipynb
@@ -1644,12 +1644,12 @@
     "\n",
     "* **Question:** What is the best value for `k` when using the PCA data?\n",
     "\n",
-    "  * **Answer:** The best k-value is  `k=4` again when using PCA data\n",
+    "  * **Answer:** The best k-value is  `k=4` again when using PCA data.\n",
     "\n",
     "\n",
     "* **Question:** Does it differ from the best k value found using the original data?\n",
     "\n",
-    "  * **Answer:** No, it is the same `k` value as found using the original data"
+    "  * **Answer:** No, it is the same `k` value."
    ]
   },
   {
